force-app/main/default/objects/Disbursed_Funds__c/Disbursed_Funds__c.object-meta.xml
<CustomObject>
    <label>Disbursed Funds</label>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Disbursed Funds Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursed Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>