force-app/main/default/objects/Disbursed_Funds__c/fields/Award__c.field-meta.xml
<CustomField>
    <fullName>Award__c</fullName>
    <label>Award</label>
    <referenceTo>Award__c</referenceTo>
    <relationshipLabel>Disbursed Funds</relationshipLabel>
    <relationshipName>Disbursed_Funds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>