force-app/main/default/objects/Disbursed_Funds__c/fields/Funding_Budget__c.field-meta.xml
<CustomField>
    <fullName>Funding_Budget__c</fullName>
    <label>Funding Budget</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.Funding_Source__c</field>
            <operation>equals</operation>
            <valueField>Funding_Budget__c.Funding_Source__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Funding_Source__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Funding_Budget__c</referenceTo>
    <relationshipLabel>Disbursed Funds</relationshipLabel>
    <relationshipName>Disbursed_Funds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>