force-app/main/default/objects/Disbursed_Funds__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populate this field to filter down Funding Budget lookup values</inlineHelpText>
    <label>Funding Source</label>
    <referenceTo>Funding_Source__c</referenceTo>
    <relationshipLabel>Disbursed Funds</relationshipLabel>
    <relationshipName>Disbursed_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>