force-app/main/default/objects/Disbursed_Funds__c/fields/Monthly_Unit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Unit</label>
    <referenceTo>Monthly_Unit__c</referenceTo>
    <relationshipLabel>Disbursed Funds</relationshipLabel>
    <relationshipName>Disbursed_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>