force-app/main/default/objects/Disbursed_Funds__c/fields/Yearly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Budget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Yearly Budget</label>
    <referenceTo>Yearly_Budget__c</referenceTo>
    <relationshipLabel>Disbursed Funds</relationshipLabel>
    <relationshipName>Disbursed_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>